svn merge -r 26467:26709 http://svn.civicrm.org/civicrm/branches/v3.1 including CRM-5548, CRM-5824, CRM-5862, CRM-5881, CRM-5886, CRM-5905, CRM-5910, CRM-5921, CRM-5922, CRM-5925, CRM-5929, CRM-5932, CRM-5933, CRM-5934, CRM-5946, CRM-5950, CRM-5951, CRM-5952, CRM-5953, CRM-5955, CRM-5956, CRM-5957, CRM-5960, CRM-5963, CRM-5968, CRM-5973, CRM-5976, CRM-5979, CRM-6000, CRM-6009 works/fixes

--- a/drupal/civitest.module.sample
+++ b/drupal/civitest.module.sample
@@ -1,6 +1,42 @@
 <?php
 
+
 function civitest_civicrm_post( $op, $objectName, $objectId, &$objectRef ) {
+    // only interested in the profile object and create operation for now
+    if ( $objectName != 'Profile' || ( $op != 'create' && $op != 'edit' ) ) {
+        // send it to custom hook
+        return false;
+    }
+
+    // send an email to the user and cc administrator
+    // with a welcome message
+    civicrm_initialize( true );
+
+    require_once 'CRM/Utils/Mail.php';
+
+    $params         = array( );
+    $fromName       = 'My Org Administrator';
+    $fromEmail      = 'info@example.org';
+    $params['from'] = '"' . $fromName . '" <' . $fromEmail . '>';
+
+    $params['toEmail']     = $objectRef['email-1'];
+    $params['toName']      = "{$objectRef['first_name']} {$objectRef['last_name']}";
+    $params['subject']     = "Thank you for supporting My Org";
+    $params['cc']          = 'myorg@example.org';
+    $objectValues          = print_r( $objectRef, true );
+    $params['text'] = "
+Dear $toName:
+
+Thank you for your show of support. The details u signed up with are:
+
+$objectValues
+
+Regards
+
+My Org Team
+";
+
+    CRM_Utils_Mail::send( $params );
 }
 
 function civitest_civicrm_custom( $op, $groupID, $entityID, &$params ) {
