git-ignore Selenium config

--- a/.gitignore
+++ b/.gitignore
@@ -105,5 +105,6 @@ sql/civicrm_drop.mysql
 sql/civicrm_navigation.mysql
 sql/civicrm_sample.mysql
 templates/CRM/common/version.tpl
+tests/phpunit/CiviTest/CiviSeleniumSettings.php
 tests/phpunit/CiviTest/civicrm.settings.php
 tools/stats/config.php
