--- a/drupal/civitest.module.sample
+++ b/drupal/civitest.module.sample
@@ -455,7 +455,7 @@ function civitest_civicrm_searchTasks( $objectType, &$tasks ) {
 function civitest_civicrm_validate( $formName, &$fields, &$files, &$form ) {
     // sample implementation
     $errors = array( );
-    if ( $formName == 'CRM_Contact_Form_Edit' ) {
+    if ( $formName == 'CRM_Contact_Form_Contact' ) {
        // ensure that external identifier is present and valid
        $externalID = CRM_Utils_Array::value( 'external_identifier', $fields );
        if ( ! $externalID ) {
@@ -564,7 +564,7 @@ function civitest_civicrm_eventDiscount( &$form, &$params ) {
  */
 function civitest_civicrm_buildForm( $formName, &$form ) {
 
-    if ( $formName == 'CRM_Contact_Form_Edit' ) {
+    if ( $formName == 'CRM_Contact_Form_Contact' ) {
         $defaultDate = array( );
         CRM_Utils_Date::getAllDefaultValues( $defaultDate );
         $defaults['custom_3_-1'] = $defaultDate;
