git-ignore CRM/Campaign/DAO

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ CRM/ACL/DAO
 CRM/Activity/DAO
 CRM/Auction/DAO
 CRM/Campaign/DAO
+CRM/Campaign/DAO
 CRM/Case/DAO
 CRM/Case/xml/configuration
 CRM/Contact/DAO/ACLContactCache.php
