--- a/drupal/civitest.module.sample
+++ b/drupal/civitest.module.sample
@@ -742,16 +742,16 @@ AND    v.weight > 0
 }
 
 /**
- * Sample hook to add more shortcuts
+ * Sample hook to add more actions for Create New
  */
-function civitest_civicrm_shortcuts( &$options ) {
-    // add link to create new profile
-    $options[] = array( 'url'   => '/civicrm/admin/uf/group?action=add&reset=1',
+function civitest_civicrm_links( $op, $objectName, $objectId, &$links ) {
+    if ( $op == 'create.new.shorcuts' ) {
+      // add link to create new profile
+      $links[] = array( 'url'   => '/civicrm/admin/uf/group?action=add&reset=1',
                         'title' => ts('New Profile'),
                         'ref'   => 'new-profile');
-    
+    }                 
 }
-
 
 function civitest_civicrm_membershipTypeValues( &$form, &$membershipTypeValues ) {
     $membershipTypeValues[1]['name']        = 'General (50% discount)';
@@ -1243,4 +1243,44 @@ function civitest_civicrm_notePrivacy (&$note) {
             $note['notePrivacy_hidden'] = FALSE;
         }
     }
+}
+
+/* a ready to use module is available at  http://github.com/tttp/civi_export */
+function civitest_civicrm_export( $exportTempTable, $headerRows, $sqlColumns, $exportMode ) {
+    $writeHeader = true;
+    $offset = 0;
+    $limit  = 200;
+
+    $query = "
+SELECT *
+FROM   $exportTempTable
+";
+    require_once 'CRM/Core/Report/Excel.php';
+    while ( 1 ) {
+        $limitQuery = $query . "
+LIMIT $offset, $limit
+";
+        $dao = CRM_Core_DAO::executeQuery( $limitQuery );
+
+        if ( $dao->N <= 0 ) {
+            break;
+        }
+
+        $componentDetails = array( );
+        while ( $dao->fetch( ) ) {
+            $row = array( );
+
+            foreach ( $sqlColumns as $column => $dontCare ) {
+                $row[$column] = $dao->$column;
+            }
+
+            $componentDetails[] = $row;
+        }
+        CRM_Core_Report_Excel::writeHTMLFile( "Export_Records", $headerRows,
+                                             $componentDetails, null, $writeHeader );
+        $writeHeader = false;
+        $offset += $limit;
+    }
+    
+    CRM_Utils_System::civiExit( );
 }
